# photoly

./: README.md  package.json
src/: App.css  App.tsx  default.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/DropDownMenu/: DropDownMenu.css  DropDownMenu.tsx
src/components/InsideWindowModal/: InsideWindowModal.css  InsideWindowModal.tsx
src/components/WindowControlBox/: WindowControlBox.css  WindowControlBox.tsx
src/components/WindowControlBox/MenuItem/: DropMenuItem.tsx  MenuItem.tsx
src/pages/MainPage/: IWModal.css  MainPage.css  MainPage.tsx
